--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -16,10 +16,10 @@ taskgraph:
             default-repository: https://github.com/mozilla-releng/scriptworker-scripts
             default-ref: master
             type: git
-        sws-taskgraph:
-            name: "Aki scriptworker-scripts taskgraph staging"
-            project-regex: sws-taskgraph
-            default-repository: https://github.com/escapewindow/sws-taskgraph
+        staging-scriptworker-scripts:
+            name: "scriptworker-scripts taskgraph staging"
+            project-regex: staging-scriptworker-scripts$
+            default-repository: https://github.com/escapewindow/staging-scriptworker-scripts
             default-ref: master
             type: git
     cached-task-prefix: scriptworker-scripts
