--- a/taskcluster/ci/tox/kind.yml
+++ b/taskcluster/ci/tox/kind.yml
@@ -32,7 +32,7 @@ job-defaults:
         cache-dotcache: false
         checkout:
             # XXX scriptworker-scripts: {}
-            sws-taskgraph: {}
+            staging-scriptworker-scripts: {}
         cwd: '{checkout}'
         # sparse-profile: basestring/none
         # workdir:
