--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -10,13 +10,13 @@ task-priority: high
 taskgraph:
     register: scriptworker_taskgraph:register
     repositories:
-        scriptworker-scripts:
-            name: "Scriptworker-scripts"
-            project-regex: scriptworker-scripts$
-            default-repository: https://github.com/mozilla-releng/scriptworker-scripts
-            default-ref: master
-            type: git
-        staging-scriptworker-scripts:
+        scriptworker:
+# XXX
+#            name: "Scriptworker-scripts"
+#            project-regex: scriptworker-scripts$
+#            default-repository: https://github.com/mozilla-releng/scriptworker-scripts
+#            default-ref: master
+#            type: git
             name: "scriptworker-scripts taskgraph staging"
             project-regex: staging-scriptworker-scripts$
             default-repository: https://github.com/escapewindow/staging-scriptworker-scripts
