--- a/taskcluster/ci/tox/kind.yml
+++ b/taskcluster/ci/tox/kind.yml
@@ -9,8 +9,8 @@ kind-dependencies:
 
 transforms:
     - scriptworker_taskgraph.transforms.tox:transforms
-    # XXX use cached_tasks if `when` doesn't work
-    # - taskgraph.transforms.cached_tasks:transforms
+    - scriptworker_taskgraph.transforms.cached:transforms
+    - taskgraph.transforms.cached_tasks:transforms
     - taskgraph.transforms.job:transforms
     - taskgraph.transforms.task:transforms
 
@@ -44,3 +44,6 @@ job-defaults:
 jobs:
     signingscript:
         description: Signingscript tox-py{python_version}
+        digest-directories:
+            - signingscript
+            - vendored/mozbuild
