--- a/taskcluster/ci/tox/kind.yml
+++ b/taskcluster/ci/tox/kind.yml
@@ -15,6 +15,7 @@ transforms:
     - taskgraph.transforms.task:transforms
 
 job-defaults:
+    description: "{name} tox-py{python_version}"
     run-on-tasks-for: ["action", "github-pull-request", "github-push"]
     worker-type: b-linux
     worker:
@@ -43,38 +44,56 @@ job-defaults:
 
 jobs:
     addonscript:
-        description: addonscript tox-py{python_version}
         digest-directories:
             - addonscript
     balrogscript:
-        description: balrogscript tox-py{python_version}
         digest-directories:
             - balrogscript
             - scriptworker_client
     beetmoverscript:
-        description: beetmoverscript tox-py{python_version}
         digest-directories:
             - beetmoverscript
     bouncerscript:
-        description: bouncerscript tox-py{python_version}
         digest-directories:
             - bouncerscript
-    client:
-        description: scriptworker_client tox-py{python_version}
-        digest-directories:
-            - scriptworker_client
     configloader:
-        description: config loader tox-py{python_version}
         digest-directories:
             - configloader
     iscript:
-        description: iscript tox-py{python_version}
         digest-directories:
             - iscript
             - scriptworker_client
             - vendored/mozbuild
+    notarization_poller:
+        digest-directories:
+            - notarization_poller
+            - scriptworker_client
+    pushapkscript:
+        worker:
+            docker-image: {in-tree: 'pushapkscript-py{python_version}'}
+        digest-directories:
+            - pushapkscript
+    pushflatpakscript:
+        worker:
+            docker-image: {in-tree: 'pushflatpakscript-py{python_version}'}
+        digest-directories:
+            - pushflatpakscript
+    pushsnapscript:
+        worker:
+            docker-image: {in-tree: 'pushsnapscript-py{python_version}'}
+        digest-directories:
+            - pushsnapscript
+    scriptworker_client:
+        digest-directories:
+            - scriptworker_client
+    shipitscript:
+        digest-directories:
+            - shipitscript
     signingscript:
-        description: signingscript tox-py{python_version}
         digest-directories:
             - signingscript
             - vendored/mozbuild
+    treescript:
+        digest-directories:
+            - treescript
+            - scriptworker_client
