--- a/taskcluster/ci/k8s-image/kind.yml
+++ b/taskcluster/ci/k8s-image/kind.yml
@@ -12,7 +12,6 @@ transforms:
     - scriptworker_taskgraph.transforms.k8s_image:transforms
     - scriptworker_taskgraph.transforms.cached:transforms
     - taskgraph.transforms.cached_tasks:transforms
-    - taskgraph.transforms.job:transforms
     - taskgraph.transforms.task:transforms
 
 # TODO dependencies
@@ -33,27 +32,15 @@ job-defaults:
             - type: directory
               name: public/
               path: /builds/worker/artifacts/
-    python-versions:
-        - 38
-    push-docker-image: false  # by-tasks_for, by-branch, by-level
-    deploy-secret-url: http://taskcluster/secrets/v1/secret/project/releng/scriptworker-scripts/deploy
-    run:
-        using: run-task
-        cache-dotcache: false
-        checkout:
-            scriptworker: {}
-        cwd: '{checkout}'
         command:
             - sh
             - -lxce
             - >-
-              cp {name}/docker.d/* docker.d &&
-              cp {name}/Dockerfile . &&
-              docker.d/generate_version_json.sh &&
-              docker.d/build_image.sh &&
-              if [ "$PUSH_DOCKER_IMAGE" == "1" ]; then
-                ./docker.d/push_image.sh
-              fi
+              /usr/local/bin/build_and_push.sh
+    python-versions:
+        - 38
+    push-docker-image: false  # by-tasks_for, by-branch, by-level
+    deploy-secret-url: http://taskcluster/secrets/v1/secret/project/releng/scriptworker-scripts/deploy
     # TODO copy image to artifacts
     # TODO scopes, metadata
 
