--- a/taskcluster/ci/k8s-image/kind.yml
+++ b/taskcluster/ci/k8s-image/kind.yml
@@ -36,7 +36,7 @@ job-defaults:
             - sh
             - -lxce
             - >-
-              sh -ex /usr/local/bin/build_and_push.sh
+              sh /usr/local/bin/build_and_push.sh
     python-versions:
         - 38
     push-docker-image: false  # by-tasks_for, by-branch, by-level
