--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -7,13 +7,9 @@ taskgraph:
     register: scriptworker_taskgraph:register
     repositories:
         scriptworker:
-# XXX
-#            name: "Scriptworker-scripts"
-#            project-regex: scriptworker-scripts$
-#            default-repository: https://github.com/mozilla-releng/scriptworker-scripts
-            name: "scriptworker-scripts taskgraph staging"
-            project-regex: staging-scriptworker-scripts$
-            default-repository: https://github.com/escapewindow/staging-scriptworker-scripts
+            name: "Scriptworker-scripts"
+            project-regex: scriptworker-scripts$
+            default-repository: https://github.com/mozilla-releng/scriptworker-scripts
             default-ref: master
             type: git
 
